--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </title>
 <body>
 <h1>login page</h1>
-<input type ="text" placeholder ="enter username"
-<input type ="password" placeholder="enter password"
-<input type ="submit" value ="login"
+<input type ="text" placeholder ="enter username" />
+<input type ="password" placeholder="enter password" />
+<input type ="submit" value ="login" />
 </body>
 <html>
 
