--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <input type ="text" placeholder ="enter username" />
 <input type ="password" placeholder="enter password" />
 <input type ="submit" value ="login" />
+<hr>
+<h1> login via mobile <h1>
+		<input type="text" placeholder ="Enter mobile no"/>
+		<input type="password" placeholder ="Enter OTP"/>
+		<input type="submit" value="login"/>
 </body>
 <html>
 
