--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<input type="text" placeholder ="Enter mobile no"/>
 		<input type="password" placeholder ="Enter OTP"/>
 		<input type="submit" value="login"/>
+		<hr>
+		<a href="https://www.google.com/">google</a>		
 </body>
 <html>
 
